Added GET /test_result_indicators
