# app/controllers/lab/test_result_indicators_controller.rb
@@ -1,0 +1,9 @@
+# frozen_string_literal: true
+
+class Lab::TestResultIndicatorsController < ApplicationController
+  def index
+    test_type_id = params.require(:test_type_id)
+
+    render json: ConceptsService.test_result_indicators(test_type_id)
+  end
+end
