# spec/dummy/swagger/v1/swagger.yaml
@@ -169,6 +169,12 @@ paths:
         description: Select results falling on a specific date
         schema:
           type: date
+      - name: status
+        in: query
+        required: false
+        description: 'Filter by sample status: ordered, drawn'
+        schema:
+          type: string
       responses:
         '200':
           description: Success
@@ -390,7 +396,6 @@ paths:
       responses:
         '204':
           description: No Content
-          content: {}
   "/api/v1/lab/tests/{test_id}/results":
     post:
       summary: Add results to order
@@ -408,7 +413,6 @@ paths:
       responses:
         '201':
           description: Created
-          content: {}
       requestBody:
         content:
           application/json:
@@ -459,6 +463,38 @@ paths:
                 required:
                 - concept_id
                 - name
+  "/api/v1/lab/test_result_indicators":
+    get:
+      summary: Test Result Indicators
+      tags:
+      - Concepts
+      description: Retrieve all result indicators for a given test
+      security:
+      - api_key: []
+      parameters:
+      - name: test_type_id
+        in: query
+        required: true
+        description: Concept ID for the desired test
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    concept_id:
+                      type: integer
+                    name:
+                      type: string
+                  required:
+                  - concept_id
+                  - name
   "/api/v1/lab/test_types":
     get:
       summary: Test types
